--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,125 @@
 /* You can add global styles to this file, and also import other style files */
+$
+
+@mixin type-text {
+    height: 30px;
+    width: 100%;
+    border: 1px solid grey;
+    border-bottom: 3px solid #707070 ;
+    background-color: #E1E1E1 ;
+    border-radius: 2px;
+    font-size: 16px;
+    font-family: arial;
+    padding: 3px;
+}
+
+@mixin type-text-true {
+    height: 30px;
+    width: 100%;
+    border: 1px solid grey;
+    border-bottom: 3px solid red ;
+    background-color: #E1E1E1 ;
+    border-radius: 2px;
+    font-size: 16px;
+    font-family: arial;
+    padding: 3px;
+}
+
+.classTrue{
+    @include type-text-true()
+}
+
+.classFlase{
+    @include type-text()
+}
+
+input[type=text]:focus{
+    border-bottom: 3px solid #154289 ;
+}
+
+input[type=email]:focus{
+    border-bottom: 3px solid #154289 ;
+}
+
+input[type=tel]:focus{
+    border-bottom: 3px solid #154289 ;
+}
+
+
+input[type=number]:focus{
+    border-bottom: 3px solid #154289 ;
+}
+
+
+select{
+    height: 30px;
+    width: 100%;
+    border: 1px solid grey;
+    border-bottom: 3px solid #707070 ;
+    background-color: #E1E1E1 ;
+    border-radius: 2px;
+    font-size: 16px;
+    font-family: arial;
+    color: #707070;
+}
+
+select:focus{
+    border-bottom: 3px solid #154289 ;
+}
+
+button {
+    background-color: #154289; /* Green */
+    border: none;
+    color: white;
+    padding: 2px 34px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+  }
+
+  .container-fluid{
+      background-image:url('http://la-motorbit-media.s3.amazonaws.com/2017/03/familia-camioneta-honda-.jpg');
+      width: 100%;
+      height: 650px;
+      padding: 0%;
+      background-size: cover;
+  } 
+
+  .container-fluid::before{
+    content: "";
+      width: 100%;
+      height: 100%;
+      background-color: black ;
+      position: absolute;
+      opacity: 0.6;
+  }
+
+  .container-fluid div{
+      z-index: 1;
+  }
+
+  .card{
+    background-color:rgba(192,192,192,0.6);
+    width: 90%;
+    position:absolute;
+  }
+
+  #principal-title{
+      font-size: 36px;
+      font-family: Arial;
+      font-weight: bold;
+        font-style: italic;
+        text-align: center;
+  }
+  #second-title{
+    font-size: 20px;
+    font-family: Arial;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+}
+  
+  
