--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-$
+$color-blue: #154289;
+$color-red: #942D46;
+$color-grey-1: #E1E1E1;
+$color-grey-2: #707070;
+$color-grey-3: #4A4A4A;
+$color-grey-4: #232323;
+$color-grey-5: #6B3176;
 
 @mixin type-text {
     height: 30px;
     width: 100%;
-    border: 1px solid grey;
-    border-bottom: 3px solid #707070 ;
-    background-color: #E1E1E1 ;
+    border: 1px solid $color-grey-2;
+    border-bottom: 3px solid $color-grey-2;
+    background-color: $color-grey-1 ;
     border-radius: 2px;
     font-size: 16px;
     font-family: arial;
@@ -16,9 +22,9 @@ $
 @mixin type-text-true {
     height: 30px;
     width: 100%;
-    border: 1px solid grey;
-    border-bottom: 3px solid red ;
-    background-color: #E1E1E1 ;
+    border: 1px solid $color-grey-2;
+    border-bottom: 3px solid $color-red;
+    background-color: $color-grey-1;
     border-radius: 2px;
     font-size: 16px;
     font-family: arial;
@@ -33,39 +39,35 @@ $
     @include type-text()
 }
 
-input[type=text]:focus{
-    border-bottom: 3px solid #154289 ;
+input:focus{
+    border-bottom: 3px solid $color-blue ;
 }
 
-input[type=email]:focus{
-    border-bottom: 3px solid #154289 ;
+#principal-title{
+    font-size: 20px;
+    font-family: Arial;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    color: $color-grey-3;
 }
-
-input[type=tel]:focus{
-    border-bottom: 3px solid #154289 ;
+#second-title{
+  font-size: 16px;
+  font-family: Arial;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+  color: $color-grey-3;
 }
-
-
-input[type=number]:focus{
-    border-bottom: 3px solid #154289 ;
-}
-
 
 select{
-    height: 30px;
-    width: 100%;
-    border: 1px solid grey;
-    border-bottom: 3px solid #707070 ;
-    background-color: #E1E1E1 ;
-    border-radius: 2px;
-    font-size: 16px;
-    font-family: arial;
+    @include type-text();
     color: #707070;
 }
 
-select:focus{
-    border-bottom: 3px solid #154289 ;
-}
+    select:focus{
+        border-bottom: 3px solid #154289 ;
+    }
 
 button {
     background-color: #154289; /* Green */
@@ -80,7 +82,7 @@ button {
     font-weight: bold;
   }
 
-  .container-fluid{
+.container-fluid{
       background-image:url('http://la-motorbit-media.s3.amazonaws.com/2017/03/familia-camioneta-honda-.jpg');
       width: 100%;
       height: 650px;
@@ -88,8 +90,8 @@ button {
       background-size: cover;
   } 
 
-  .container-fluid::before{
-    content: "";
+.container-fluid::before{
+      content: "";
       width: 100%;
       height: 100%;
       background-color: black ;
@@ -97,29 +99,51 @@ button {
       opacity: 0.6;
   }
 
-  .container-fluid div{
+.container-fluid div{
       z-index: 1;
   }
 
-  .card{
+.card{
     background-color:rgba(192,192,192,0.6);
     width: 90%;
     position:absolute;
   }
-
-  #principal-title{
-      font-size: 36px;
-      font-family: Arial;
-      font-weight: bold;
-        font-style: italic;
-        text-align: center;
-  }
-  #second-title{
-    font-size: 20px;
-    font-family: Arial;
-    font-weight: bold;
-    font-style: italic;
-    text-align: center;
-}
   
+.title-left{
+      font-family: Arial;
+      font-size: 36px ;
+      color: $color-grey-1;
+      position: absolute;
+      margin-top: 300px;
+    font-weight: bold;
+    margin-left: 30px;
+  }
+
+.title-left-bottom{
+    font-family: Arial;
+    font-size: 16px ;
+    color: $color-grey-1;
+    position: absolute;
+    margin-top: 350px;
+    margin-left: 30px;
+  }
+
+.prueba{
+      height: 620px;
+      width: 100%;
+}
+
+span{
+    font-family: Arial; 
+    font-size: 14px;
+    color: $color-grey-4;
+        
+}
+
+a{
+    font-family: Arial; 
+    font-size: 14px;
+    color: $color-blue; 
+    text-decoration: underline;
+}
   
